add deckId filter to GetWords API
